--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "aws/aws-sdk-php-laravel": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
+        "kwn/number-to-words": "^2.11",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
